--- a/ml01.md
+++ b/ml01.md
@@ -1,6 +1,5 @@
-## This can be your internal website page / project page
-
-**Project description:** Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+## Flight Delay - Estimación de atraso de vueloa
+**Project description:** Este proyecto se basa en predecir la probabilidad de atraso o demora mayor a 15 minutos desde su horario de partida para los despegues de vuelos con origen en el aeropuerto de Santiago de Chile, para lo cual se cuenta con datos públicos y reales del año 2017. Este trabajo no se enfoca en entender las causas de los atrasos sino en la estimación de ocurrencia en función de los datos disponibles. 
 
 ### 1. Suggest hypotheses about the causes of observed phenomena
 
