--- a/ml01.md
+++ b/ml01.md
@@ -1,4 +1,4 @@
-## Flight Delay - Estimación de atraso de vueloa
+## Flight Delay - Estimación de atraso de vuelo
 **Project description:** Este proyecto se basa en predecir la probabilidad de atraso o demora mayor a 15 minutos desde su horario de partida para los despegues de vuelos con origen en el aeropuerto de Santiago de Chile, para lo cual se cuenta con datos públicos y reales del año 2017. Este trabajo no se enfoca en entender las causas de los atrasos sino en la estimación de ocurrencia en función de los datos disponibles. 
 
 ### 1. Suggest hypotheses about the causes of observed phenomena
