--- a/projects/ML01/ml01.md
+++ b/projects/ML01/ml01.md
@@ -3,6 +3,10 @@
 
 ### Aspectos técnicos:
 
+Tarea: Clasificación
+Modelos: XGBoost - Logist Regression
+Técnicas resaltadas: Embbeddings 
+
 ### Desarrollo
 
 Ver [Notebook](https://github.com/gabrielfernandorey/gabrielfernandorey.github.io/blob/main/projects/ML01/flight_delay.ipynb).
