--- a/projects/ML01/ml01.md
+++ b/projects/ML01/ml01.md
@@ -1,5 +1,5 @@
 ## Flight Delay - Estimación de atraso de vuelos
-**Descripción:** Este proyecto se basa en predecir la probabilidad de atraso o demora de vuelos mayor a 15 minutos desde su horario de partida para los despegues con origen en el aeropuerto de Santiago de Chile, para lo cual se cuenta con datos públicos y reales del año 2017. Este trabajo no se enfoca en entender las causas de los atrasos sino en la estimación de ocurrencia de atrasos en función de los datos disponibles. 
+Este proyecto se basa en predecir la probabilidad de atraso o demora de vuelos mayor a 15 minutos desde su horario de partida para los despegues con origen en el aeropuerto de Santiago de Chile, para lo cual se cuenta con datos públicos y reales del año 2017. Este trabajo no se enfoca en entender las causas de los atrasos sino en la estimación de ocurrencia de atrasos en función de los datos disponibles. 
 
 ### Aspectos técnicos:
 
