--- a/projects/DL01/dl01.md
+++ b/projects/DL01/dl01.md
@@ -1,12 +1,13 @@
-## Flight Delay - Estimación de atraso de vuelos
-Este proyecto se basa en predecir la probabilidad de atraso o demora de vuelos mayor a 15 minutos desde su horario de partida para los despegues con origen en el aeropuerto de Santiago de Chile, para lo cual se cuenta con datos públicos y reales del año 2017. Este trabajo no se enfoca en entender las causas de los atrasos sino en la estimación de ocurrencia de atrasos en función de los datos disponibles. 
+## Clasificación de audio - Identificación del canto de los pájaros
+Este trabajo es objeto de la experimentación para la identificación del canto de los pájaros basado en la clasificación de audio modelado con redes convolucionales. Fue desarrollado para ser presentado como Global Projet para el postgrado en inteligencia artificial y machine learning de IEBS (España). El objetivo es la experimentación del Deep learning y su modelado, no desarrollando la aplicación final de usuario que debería contener al modelo en cuestión.
 
 ### Aspectos técnicos:
 
   - Tarea: Clasificación
-  - Modelos: XGBoost - Logist Regression
-  - Técnicas resaltadas: Embbeddings 
+  - Modelos: Redes Neuronales Convolucionales
+  - Framework: TensorFlow
+  - Técnicas resaltadas: Submuestreo para simular data augmentation
 
 ### Desarrollo
 
-Ver [Notebook](https://github.com/gabrielfernandorey/gabrielfernandorey.github.io/blob/main/projects/ML01/flight_delay.ipynb).
+Ver [PDF](https://github.com/gabrielfernandorey/gabrielfernandorey.github.io/blob/main/projects/DL01/Global Project Gabriel Rey.pdf).
