--- a/projects/DL01/dl01.md
+++ b/projects/DL01/dl01.md
@@ -1,5 +1,5 @@
 ## Clasificación de audio - Identificación del canto de los pájaros
-Este trabajo es objeto de la experimentación para la identificación del canto de los pájaros basado en la clasificación de audio modelado con redes convolucionales. Fue desarrollado para ser presentado como Global Projet para el postgrado en inteligencia artificial y machine learning de IEBS (España). El objetivo es la experimentación del Deep learning y su modelado, no desarrollando la aplicación final de usuario que debería contener al modelo en cuestión.
+Este trabajo es objeto de la experimentación para la identificación del canto de los pájaros basado en la clasificación de audio, modelado con redes convolucionales. Fue desarrollado para ser presentado como Global Projet para el postgrado en inteligencia artificial y machine learning de IEBS (España). El objetivo es la experimentación con Deep learning y su modelado, no desarrollando la aplicación final de usuario que debería contener al modelo en cuestión.
 
 ### Aspectos técnicos:
 
