--- a/projects/ML01/ml01.md
+++ b/projects/ML01/ml01.md
@@ -5,7 +5,7 @@ Este proyecto se basa en predecir la probabilidad de atraso o demora de vuelos m
 
   - Tarea: Clasificación
   - Modelos: XGBoost - Logist Regression
-  - Técnicas resaltadas: Embbeddings 
+  - Técnica destacada: Embbeddings 
 
 ### Desarrollo
 
