--- a/projects/DL01/dl01.md
+++ b/projects/DL01/dl01.md
@@ -6,7 +6,7 @@ Este trabajo es objeto de la experimentación para la identificación del canto 
   - Tarea: Clasificación
   - Modelos: Redes Neuronales Convolucionales
   - Framework: TensorFlow
-  - Técnicas resaltadas: Submuestreo para simular data augmentation
+  - Técnicas destacada: Submuestreo para simular data augmentation
 
 ### Desarrollo
 
