Creado mediante Colaboratory

--- a/projects/ML01/flight_delay.ipynb
+++ b/projects/ML01/flight_delay.ipynb
@@ -2799,6 +2799,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Generacion de embbedings\n",
         "tamano_embedding = 5\n",
         "for i in range(len(nuevas_variables)):\n",
         "  valores_transformados = encoder.fit_transform(df_transform[var_embbed[i]].values.reshape(-1,))  # Codificar los valores alfanuméricos\n",
@@ -2808,7 +2809,7 @@
         "  for c in range(tamano_embedding):\n",
         "    df_embedding[var_embbed[i]+str(c)] = matriz_embedd[:,c]\n",
         "\n",
-        "# Eliminamos las columnas de kas variables transformadas\n",
+        "# Eliminamos las columnas de las variables transformadas\n",
         "df_embedding = df_embedding.drop(['Vlo-I','Des-I','Emp-I','Vlo-O','Emp-O'], axis=1)"
       ],
       "metadata": {
