Creado mediante Colaboratory

--- a/projects/ML01/flight_delay.ipynb
+++ b/projects/ML01/flight_delay.ipynb
@@ -4588,7 +4588,7 @@
       "source": [
         "##### Conclusiones\n",
         "\n",
-        "- 1. El modelo presenta un buen rendimiento a priori pero XGBoost es superior, podríamos estar en presencia de overfitting aún habiendo aplicado una compensación para balancear las clases en el modelo, sin embargo otra alternativa para someter a evaluación es proporcionar con datos sinteticos un balance de clases (oversampling / undersampling) y evaluar el modelo.\n",
+        "- 1. El modelo presenta un buen rendimiento a priori pero XGBoost es superior, podríamos estar en presencia de overfitting aún habiendo aplicado una compensación en los hiperparámetros para balancear las clases en el modelo, sin embargo otra alternativa para someter a evaluación es proporcionar con datos sinteticos un balance de clases (oversampling / undersampling) y evaluar el modelo.\n",
         "\n",
         "- 2. No se ha trabajado en la búsqueda de hiperparámetros, se utilizaron los hiperparametros por default.\n",
         "\n",
